Melhoria da sugestão de comandos